@@ -1,3 +1,7 @@
+2012-03-29 S. Thiell <stephane.thiell@cea.fr>
+
+	* Task.py: timeout parameters better explained (ticket #157).
+
 2012-03-28 S. Thiell <stephane.thiell@cea.fr>
 
 	* CLI/OptionParser.py: Add --diff option to enable diff display between
